# shopsteward

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  KICKOFF.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json
.claude/agents/: architect.md  lua-impl.md  python-impl.md  reviewer.md  test-author.md
.github/workflows/: ci.yml
config/defaults/: README.md  editing.json  mockups.json  tuning_profile.json
config/defaults/preset_families/: brewery.json  neutral.json  race.json  wedding.json
config/defaults/prompts/: commercial_score.txt
config/defaults/staging_templates/: bedroom-beige-01.template.json  bedroom-cabin-rustic-01.template.json  bedroom-cool-01.template.json  bedroom-greige-01.template.json  bedroom-greige-02.template.json  bedroom-navy-moody-01.template.json  cabin-log-rustic-01.template.json  dining-terracotta-01.template.json  dining-terracotta-02.template.json  entryway-white-midcentury-01.template.json  gallery-charcoal-01.template.json  livingroom-charcoal-moody-01.template.json  livingroom-coastal-white-01.template.json  livingroom-oakpanel-01.template.json  livingroom-plaster-beams-01.template.json  livingroom-sage-scandi-01.template.json  livingroom-sage-scandi-02.template.json  livingroom-sage-scandi-03.template.json  (+11 more)
docs/: PRD_v2.1.md  PRD_v2.md
docs/designs/: 2026-07-03-m2-editing-module.md  2026-07-03-m3-scoring-gate1-landing.md  2026-07-04-m4-templates-compositor.md
docs/plans/: 2026-07-03-m0-m1-implementation.md  2026-07-03-m2-editing-module.md  2026-07-03-m3-scoring-gate1-landing.md  2026-07-04-m4-templates-compositor.md
docs/setup/: README.md  etsy.md  staging-template-prompts.md
frontend/: index.html  vite.config.ts
frontend/src/: App.tsx  api.ts
plugins/epd-edit-bridge/: ApplySettings.lua  ExportSettings.lua  Info.lua  JobFile.lua  JsonCodec.lua  QueueProcessor.lua  README.md  TESTING.md  example_apply.lua  make_test_jobs.py
scripts/: make_placeholder_templates.py
src/shopsteward/: api.py  cli.py  etsy_cli.py  settings.py
tests/: conftest.py  test_api.py  test_cli.py
tests/core/: test_events.py  test_folderproto.py  test_projections.py  test_sync.py
tests/editing/: test_dispatch_outcomes.py  test_e2e_mass_mode.py  test_ingest.py  test_presets.py  test_projections.py
tests/mockups/: helpers.py  test_compositor.py  test_config.py  test_e2e_mockups.py  test_intents.py  test_jobs.py  test_selection.py  test_templates.py
tests/pipeline/: test_e2e_hero_gate1.py  test_gate1.py  test_imaging.py  test_landing.py  test_live_gate.py  test_scoring.py  test_technical_scorer.py  test_tuning.py  test_vision_config_provider.py  test_vision_factory.py
(+70 files in other folders)
