[project]
name = "shopsteward"
version = "0.1.0"
description = "Three-gate automation for a photography print-on-demand and digital-download shop on Etsy (Printful + Gelato)."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Eric DiPietro" }]
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "httpx>=0.27",
  "pillow>=10.4",
  "opencv-python-headless>=4.10",
  "python-dotenv>=1.0",
  "typer>=0.12",
]

[project.scripts]
shopsteward = "shopsteward.cli:app"

[dependency-groups]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "ruff>=0.6",
  "respx>=0.21",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
